Database was added and also Tables and loginDbContext class.

--- a/P.10 MVC - Variables de Sesion/appsettings.json
+++ b/P.10 MVC - Variables de Sesion/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "equiposDbConnection": "Data Source = LOCALHOST; Initial Catalog: login; User id = sa; Password = sa; Connection Timeout: 120; Encrypt: False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
