--- a/P.10 MVC - Variables de Sesion/appsettings.json
+++ b/P.10 MVC - Variables de Sesion/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "equiposDbConnection": "Data Source = LOCALHOST; Initial Catalog: login; User id = sa; Password = sa; Connection Timeout: 120; Encrypt: False"
+    "stringConnection": "Data Source = DESKTOP-LBJSDQI; Initial Catalog: login; User id = sa; Password = sa; Connection Timeout: 120; Encrypt: False"
   },
   "Logging": {
     "LogLevel": {
